--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -103,5 +103,5 @@ div.activity-details {
     color: #222222;
     background-color: #999999;
     border-radius: 20px;
-    padding-top: 30px !important;
+    margin-top: 30px !important;
 }
