--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -1,9 +1,8 @@
-
-
 .main-message {
-    width: 75%;
+    width: 90%;
     color: #222222;
     background-color: #999999;
     border-radius: 20px;
-    margin-top: 70px !important;
+    margin: 100px 0 0 10px !important;
+    padding: 10px 10px !important;
 }
