--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -1,8 +1,8 @@
 .main-message {
     width: 90%;
     color: #222222;
-    font-size: small;
-    background-color: #999999;
+    font-size: x-small;
+    background-color: #dddddd;
     border-radius: 20px;
     margin: 100px 0 0 10px !important;
     padding: 10px 10px !important;
