--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -7,3 +7,7 @@
     margin: 100px 0 0 10px !important;
     padding: 10px 10px !important;
 }
+
+.body-message {
+    margin-top: 60px !important;
+}
