--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -1,6 +1,6 @@
 .main-message {
     width: 90%;
-    hight: 20%;
+    height: 20%;
     color: #222222;
     font-size: x-small;
     background-color: #dddddd;
