--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -13,14 +13,14 @@
     margin-top: 60px !important;
 }
 
-.output-mid {
+.output-m {
     margin-top: 30px;
 }
 
-.output-west {
+.output-w {
     margin-bottom: 40px;
 }
 
-.output-east {
+.output-e {
     margin-bottom: 10px;
 }
