--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -14,13 +14,13 @@
 }
 
 .output-m {
-    margin-top: 30px;
+    margin-top: 30px !important;
 }
 
 .output-w {
-    margin-bottom: 40px;
+    margin-bottom: 40px !important;
 }
 
 .output-e {
-    margin-bottom: 10px;
+    margin-bottom: 10px !important;
 }
