--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -18,7 +18,7 @@
     margin-top: 30px !important;
 }
 
-.output-w .output-e {
+.output-w, .output-e {
     text-align: left;
-    margin-bottom: 10px !important;
+    margin-bottom: 30px !important;
 }
